--- a/test/dest/index.html
+++ b/test/dest/index.html
@@ -2,16 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>gulp-sceg test -- title from custom data</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCoreRDark.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shThemeRDark.css" rel="stylesheet" />
+  <title>Element Guide (bootstrap sample)</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism-okaidia.min.css">
   <style>
-  .syntaxhighlighter {
-    padding: 10px 0;
-    margin-bottom: 20px !important;
-  }
   .sceg-preview {
     border: 1px solid #999;
     padding: 2em;
@@ -26,16 +21,11 @@
     margin-bottom: 0;
   }
   </style>
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushXml.min.js"></script>
-  <script>
-  addEventListener('DOMContentLoaded', function() {
-    SyntaxHighlighter.all();
-  });
-  </script>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/components/prism-markup.min.js"></script>
 </head>
 <body>
 
@@ -66,11 +56,11 @@
 <div class="alert alert-danger" role="alert"><strong>Oh snap!</strong> Change a few things up and try submitting again.</div>
         </div>
         <h5>Code</h5>
-        <pre class="brush: html;">
-<div class="alert alert-success" role="alert"><strong>Well done!</strong> You successfully read this important alert message.</div>
-<div class="alert alert-info" role="alert"><strong>Heads up!</strong> This alert needs your attention, but it's not super important.</div>
-<div class="alert alert-warning" role="alert"><strong>Warning!</strong> Better check yourself, you're not looking too good.</div>
-<div class="alert alert-danger" role="alert"><strong>Oh snap!</strong> Change a few things up and try submitting again.</div></pre>
+        <pre class="language-markup"><code class="language-markup">
+&lt;div class&#x3D;&quot;alert alert-success&quot; role&#x3D;&quot;alert&quot;&gt;&lt;strong&gt;Well done!&lt;/strong&gt; You successfully read this important alert message.&lt;/div&gt;
+&lt;div class&#x3D;&quot;alert alert-info&quot; role&#x3D;&quot;alert&quot;&gt;&lt;strong&gt;Heads up!&lt;/strong&gt; This alert needs your attention, but it&#x27;s not super important.&lt;/div&gt;
+&lt;div class&#x3D;&quot;alert alert-warning&quot; role&#x3D;&quot;alert&quot;&gt;&lt;strong&gt;Warning!&lt;/strong&gt; Better check yourself, you&#x27;re not looking too good.&lt;/div&gt;
+&lt;div class&#x3D;&quot;alert alert-danger&quot; role&#x3D;&quot;alert&quot;&gt;&lt;strong&gt;Oh snap!&lt;/strong&gt; Change a few things up and try submitting again.&lt;/div&gt;</code></pre>
         <small class="sceg-comment">
           <p>Provide contextual feedback messages for typical user actions with the handful of available and flexible alert messages.</p>
 
@@ -90,14 +80,14 @@
 
         </div>
         <h5>Code</h5>
-        <pre class="brush: html;">
-<h1>Example heading <span class="badge badge-default">New</span></h1>
-<h2>Example heading <span class="badge badge-default">New</span></h2>
-<h3>Example heading <span class="badge badge-default">New</span></h3>
-<h4>Example heading <span class="badge badge-default">New</span></h4>
-<h5>Example heading <span class="badge badge-default">New</span></h5>
-<h6>Example heading <span class="badge badge-default">New</span></h6>
-</pre>
+        <pre class="language-markup"><code class="language-markup">
+&lt;h1&gt;Example heading &lt;span class&#x3D;&quot;badge badge-default&quot;&gt;New&lt;/span&gt;&lt;/h1&gt;
+&lt;h2&gt;Example heading &lt;span class&#x3D;&quot;badge badge-default&quot;&gt;New&lt;/span&gt;&lt;/h2&gt;
+&lt;h3&gt;Example heading &lt;span class&#x3D;&quot;badge badge-default&quot;&gt;New&lt;/span&gt;&lt;/h3&gt;
+&lt;h4&gt;Example heading &lt;span class&#x3D;&quot;badge badge-default&quot;&gt;New&lt;/span&gt;&lt;/h4&gt;
+&lt;h5&gt;Example heading &lt;span class&#x3D;&quot;badge badge-default&quot;&gt;New&lt;/span&gt;&lt;/h5&gt;
+&lt;h6&gt;Example heading &lt;span class&#x3D;&quot;badge badge-default&quot;&gt;New&lt;/span&gt;&lt;/h6&gt;
+</code></pre>
         <small class="sceg-comment">
           <p>Provide contextual feedback messages for typical user actions with the handful of available and flexible alert messages.</p>
 
@@ -117,11 +107,11 @@
 <div class="w-100 p-3" style="background-color: #eee;">Width 100%</div>
         </div>
         <h5>Code</h5>
-        <pre class="brush: html;">
-<div class="w-25 p-3" style="background-color: #eee;">Width 25%</div>
-<div class="w-50 p-3" style="background-color: #eee;">Width 50%</div>
-<div class="w-75 p-3" style="background-color: #eee;">Width 75%</div>
-<div class="w-100 p-3" style="background-color: #eee;">Width 100%</div></pre>
+        <pre class="language-markup"><code class="language-markup">
+&lt;div class&#x3D;&quot;w-25 p-3&quot; style&#x3D;&quot;background-color: #eee;&quot;&gt;Width 25%&lt;/div&gt;
+&lt;div class&#x3D;&quot;w-50 p-3&quot; style&#x3D;&quot;background-color: #eee;&quot;&gt;Width 50%&lt;/div&gt;
+&lt;div class&#x3D;&quot;w-75 p-3&quot; style&#x3D;&quot;background-color: #eee;&quot;&gt;Width 75%&lt;/div&gt;
+&lt;div class&#x3D;&quot;w-100 p-3&quot; style&#x3D;&quot;background-color: #eee;&quot;&gt;Width 100%&lt;/div&gt;</code></pre>
         <small class="sceg-comment">
           <p>Easily make an element as wide or as tall (relative to its parent) with our width and height utilities. Includes support for <code>25%</code>, <code>50%</code>, <code>75%</code>, and <code>100%</code> by default.</p>
 
